--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     			loaddata += "<tr>"+ "<td>"+geemails[i].date+"</td>" + "<td>"+geemails[i].subject+"</td>" + "<td>"+geemails[i].sender+"</td>" +"</tr>";
 				}
 				
-				document.getElementById("loadmail").innerHTML = "<tr>"+"<td><b>Date</b></td>"+"<td><b>Subject</b></td>"+"<td><b>Date</b></td>"+"</tr>" + loaddata;
+				document.getElementById("loadmail").innerHTML = "<tr>"+"<td><b>Date</b></td>"+"<td><b>Subject</b></td>"+"<td><b>Sender</b></td>"+"</tr>" + loaddata;
+				
+				//Create a new message similar to the old messages
+				document.getElementById("n.m").innerHTML = "<tr>"+ "<td>"+getNewMessage().date+"</td>" + "<td>"+getNewMessage().subject+"</td>" + "<td>"+getNewMessage().sender+"</td>" +"</tr>";
 
       };
 
@@ -27,8 +30,11 @@
 
 		<div class="container" id="main">
 			
+			<div>Inbox</div>
 			<table id="loadmail" border="3px"></table>
-			<p id="n.m"></p>
+			<br>
+			<div>New Message</div>
+			<table id="n.m" border="3px"></table>
 
 
 		</div>
