--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 
 				for (i = 0; i < geemails.length; i++) {
     			loaddata += "<tr>"+ "<td>"+geemails[i].date+"</td>" + "<td>"+geemails[i].subject+"</td>" + "<td>"+geemails[i].sender+"</td>" +"</tr>";
-				}
+				} 
+
 				
 				document.getElementById("loadmail").innerHTML =  topicheads + loaddata;
 				document.getElementById("inboxcount").innerHTML =  "Inbox ("+geemails.length+")";
 				
+				//Cant find a way to put create buttons using the for loop
+				document.getElementById('messagebody').innerHTML = "<b>Message Content:</b><br>" + geemails[1].body;
+
 				//Create a new message similar to the old messages
 				document.getElementById("n.m").innerHTML = topicheads + "<tr>"+ "<td>"+getNewMessage().date+"</td>" + "<td>"+getNewMessage().subject+"</td>" + "<td>"+getNewMessage().sender+"</td>" +"</tr>";
 
@@ -33,10 +37,12 @@
 		<div class="container" id="main">
 			
 			<div id="inboxcount"></div>
-			<table id="loadmail" border="3px"></table>
+			<table id="loadmail" border="3px solid gray"></table>
 			<br>
-			<div id="messagecontent"></div>
+
+			<div id="messagebody"></div>
 			<br>
+			
 			<div><h3>New Message</h3></div>
 			<table id="n.m" border="3px"></table>
 
