--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
 
         var loaddata = "";
       	var topicheads = "<tr>"+"<th><b>Date</b></th>"+"<th><b>Subject</b></th>"+"<th>Sender</th>"+"</tr>";
+      	var getnewm = topicheads;
 
         //Loading inital message into a table using for loop and display on html
 				for (i = 0; i < geemails.length; i++) {
     			loaddata += "<tr>"+ "<td>"+geemails[i].date+"</td>" + "<td>"+geemails[i].subject+"</td>" + "<td>"+geemails[i].sender+"</td>" +"</tr>"
-    			+"<tr><td colspan='3'>Hi</td></tr>";
+    			+"<tr><td colspan='3'>"+geemails[i].body;+"</td></tr>";
 				}
 
 				document.getElementById("loadmail").innerHTML =  topicheads + loaddata;
 
+
 				//Keeps tracks of message in the inbox
 				document.getElementById("inboxcount").innerHTML =  "Inbox ("+geemails.length+")";
 
-				//Create IDs for #loadmail even rows and make it into hidden messages
+				//Make the even rows into hidden messages
 				for (i = 1; i < geemails.length*2+1; i++) {
            if(i%2==0){
-              document.getElementById("loadmail").rows[i].id = "hidden_"+i;
+              //document.getElementById("loadmail").rows[i].id = "hidden_"+i;
               document.getElementById("loadmail").rows[i].cells[0].style.display = "none";
            }
 				}
@@ -31,32 +33,23 @@
 				//Adding EventListners to all the odd rows of #loadmail using for loop
 				for (let i = 0; i <= geemails.length*2; i++) {
     			if(i%2==1){
-    				document.getElementById("loadmail").rows[i].addEventListener('click', function() { viewMessage(i); } );
+    				document.getElementById("loadmail").rows[i].addEventListener('click', function() { viewMessage(i, 1); } );
 					}
 				}
 
-				//This function displays the geemails.bdy of the clicked row.
-      	function viewMessage(num) {
- 			   	var x = document.getElementById("loadmail").rows[num+1].cells[0];
+				//This function displays the geemails.body of the clicked row.
+      	function viewMessage(num, checkp) {
 
- 			   	//Logic statement to determine which geemail body to show
- 			   	if(num == 1) {
- 			   		var num1 = num-1;
- 			   	} else if(num == 3) {
- 			   		var num1 = num-2;
- 			   	} else {
- 			   		var num1 = (num-1)/2;
- 			   	}
+      		if (checkp == 1) {
+      			var a = document.getElementById("loadmail").rows[num+1].cells[0];
+      		} else if (checkp == 2) {
+      			var a = document.getElementById("n.m").rows[num+1].cells[0];
+      		}
 
- 			   	//Tracking the number of the message we are showing
- 			   	var num2 = num1 +1;
-
- 			   	x.innerHTML = "<b>Message("+num2+") Content</b>:"+"<br>" + geemails[num1].body;
-
-   			 	if (x.style.display === "none") {
-        		x.style.display = "table-cell";
+   			 	if (a.style.display === "none") {
+        		a.style.display = "table-cell";
     			} else {
-        		x.style.display = "none";
+        		a.style.display = "none";
     			}
       		//var y = document.getElementById("loadmail").rows[num].id 
       		//document.getElementById('messagebody').innerHTML = "<b>This id ID name:</b><br>" + y;
@@ -64,8 +57,26 @@
 
 				//Creates a new message with similar properties as the 10 inital messages every 5 seconds
 				setInterval(function(){ 
-					document.getElementById("n.m").innerHTML = topicheads + "<tr>"+ "<td>"+getNewMessage().date+"</td>" + "<td>"+getNewMessage().subject+"</td>" + "<td>"+getNewMessage().sender+"</td>" +"</tr>";
-					document.getElementById("n.m").rows[1].addEventListener('click', function() { document.getElementById('messagebody').innerHTML = "<b>Message(New) Content:</b><br>"+ getNewMessage().body; } );					
+					var b = "<tr>"+ "<td>"+getNewMessage().date+"</td>" + "<td>"+getNewMessage().subject+"</td>" + "<td>"+getNewMessage().sender+"</td>" +"</tr>"+"<tr><td colspan='3'>"+getNewMessage().body+"</td></tr>";
+					getnewm += b;
+					document.getElementById("n.m").innerHTML = getnewm;
+
+					//This evenlistener is just a test that I can click some stuff, but if I put this in a for loop it doesn't work
+					document.getElementById("n.m").rows[1].addEventListener('click', function() { alert("hi"); } );
+
+					/* This for loop is able to hide the message
+					for (i = 1; i < geemails.length*2+1; i++) {
+          	if(i%2==0){
+              	document.getElementById("n.m").rows[i].cells[0].style.display = "none";
+           	}
+					} */
+
+					/* This for loop is not able to click message
+					for (let i = 0; i <= geemails.length*2; i++) {
+    				if(i%2==1){
+    					//document.getElementById("n.m").rows[i].addEventListener('click', function() { viewMessage(i, 1); } );
+						}
+					} */
 
 				}, 5000);
 
@@ -87,7 +98,6 @@
 			
 			<div><h3>New Message</h3></div>
 			<table id="n.m"></table>
-
 
 		</div>
 
